--- a/Reverse Geocoding/Info.plist
+++ b/Reverse Geocoding/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location is used for demo purposes.</string>
 </dict>
 </plist>
